# dna-analyzer-design

./: .gitignore  CMakeLists.txt  Makefile  README.md
Src/: main  main.cpp
Src/CLI/CommandParams/: IParams.h
Src/CLI/Commands/: ICommand.h
Src/Commands/: CommandFactory.cpp  CommandFactory.h  DupCommand.cpp  DupCommand.h  ICommand.h  ICreationCommand.h  LoadCommand.cpp  LoadCommand.h  NewCommand.cpp  NewCommand.h
Src/Controller/CommandParams/: IParams.cpp  IParams.h
Src/Controller/Commands/: ICommand.h
Src/Controller/Exeptions/: OpenFileError.h
Src/Controller/Manager/: Manager.cpp  Manager.h
Src/DNA/: DNAContainer.cpp  DNAContainer.h  DNAData.h  DNAHash.cpp  DNAHash.h  DNAMetaData.cpp  DNAMetaData.h  DnaSequence.cpp  DnaSequence.h  Nucleotide.h  Status.h
Src/DNA/Container/: DNAContainer.cpp  DNAContainer.h
Src/Exeptions/: InValidCommandName.h  InValidParams.h  OpenFileError.h
Src/Exeptions/InValidParam/: IdOrNameError.h  InValidIdPrefix.h  InValidParams.h  IndexSeqOutOfRange.h  TooFewArguments.h  (+1 more)
Src/Manager/: IParams.cpp  IParams.h  Manager.cpp  Manager.h  Parser.cpp  Parser.h  Parsing.cpp  Parsing.h
Src/Params/: DupParams.cpp  DupParams.h  IParams.cpp  IParams.h  LoadParams.cpp  LoadParams.h  NewParams.cpp  NewParams.h  ParamsFactory.cpp  ParamsFactory.h
Src/Reader/: ConsoleReader.cpp  ConsoleReader.h  FileReader.cpp  FileReader.h  IReader.h  StringReader.h  charPReader.h
Src/Test/: DnaFile.txt  TestDnaSequence.cpp  TestDnaSequence.h
Src/Utils/: ConversionFunctions.h  stringHash.h
Src/Writer/: ConsoleWriter.h  FileWriter.cpp  FileWriter.h
(+129 files in other folders)
